syntax = "proto3";

package auth_proto;

option go_package="auth_proto";

message LoginRequest {
  string email = 1;
  string nickname = 2;
  string password = 3;
}

message Response {
  bool error = 1;
  bytes data = 2;
  int32 code = 3;
  string type = 4;
  string msg = 5;
}


service authServicesUsers {
  rpc Login(LoginRequest) returns (Response){}
}
